updated navbar, spacing corrections, first draft complete

--- a/src/Style.css
+++ b/src/Style.css
@@ -33,12 +33,19 @@
 }
 
 
+.made-right-box{
+  height: 38vh;           /* Box controls height */
+  border-radius: 30px;
+  overflow: hidden;        /* Clips the image */
+  position: relative;      /* Needed for absolute child */
+}
+
+
 .box {
   height: 50vh;           /* Box controls height */
   border-radius: 30px;
   overflow: hidden;        /* Clips the image */
   position: relative;      /* Needed for absolute child */
-
 }
 /*  */
 .picture-mask2 {
@@ -111,8 +118,9 @@
 .flip-card .back {
   position: absolute;
   width: 100%;
-  height: 100%;
-  border-radius: 1rem;
+  height: 38vh;
+  border-radius: 30px;
+  padding: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
